@@ -1,6 +1,13 @@
 ### NOTE: SETTABLE_CONFIG
-INSTALL_LOCATION ?= ../buildroot-2016.11.1-x86_64
+INSTALL_LOCATION ?= ../../buildroot-2016.11.1-x86_64
 
-include ../src/Makefile.common
+# ===============================================================
+# We don't want to use the compiler cache; 
+# especially since not everyone has write access 
+# to the buildroot installation.
+#  ===============================================================
+export CCACHE_DISABLE=1
+
+include ../../src/Makefile.common
 
 
