@@ -3,10 +3,15 @@ XCROSS_HOME ?=
 
 SRC_TEST_DIR := ../../src/test
 
-CXX=$(XCROSS_HOME)g++
+CXX=$(XCROSS_HOME)gcc
 
-CXXFLAGS := -Wall -fPIC -O3
-CPPFLAGS := -I$(KERNEL_MODULE_EVRMA)/src
+# The linker is not happy with "-fPIC"
+#CXXFLAGS := -Wall -fPIC -O3 
+CXXFLAGS := -Wall -O3
+
+# Need this because of GCC 5.X
+CPPFLAGS := -D_GLIBCXX_USE_CXX11_ABI=0
+CPPFLAGS += -I$(KERNEL_MODULE_EVRMA)/src
 CPPFLAGS += -I$(EVRMA)/include
 CPPFLAGS += -I$(SRC_TEST_DIR)
 
@@ -18,7 +23,7 @@ CLEANEXTS   = o a d
 # source files.
 SRC_TEST1 =     main_virt_dev.cpp
 SRC_TEST2 =     main_virt_dev2.cpp
-SRC_API =     api.cpp
+SRC_API =       api.cpp
 
 VDEV_TEST1=test_virt_dev
 VDEV_TEST2=test_virt_dev2
